--- a/nginx.conf
+++ b/nginx.conf
@@ -34,10 +34,10 @@ http {
 
     server {
         listen 80;
-        server_name khaleel.work;
+        server_name example.com;
 
         location / {
-            proxy_pass http://147.182.221.201;
+            proxy_pass http://wordpress-ip-address;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -45,17 +45,17 @@ http {
     }
 
     server {
-        server_name khaleel.work;
+        server_name wordpress-server;
         location / {
-            proxy_pass http://147.182.221.201;
+            proxy_pass http://wordpress-ip-address;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
 
         listen 443 ssl; # managed by Certbot
-        ssl_certificate /etc/letsencrypt/live/khaleel.work/fullchain.pem; # managed by Certbot
-        ssl_certificate_key /etc/letsencrypt/live/khaleel.work/privkey.pem; # managed by Certbot
+        ssl_certificate /etc/letsencrypt/live/example.com/fullchain.pem; # managed by Certbot
+        ssl_certificate_key /etc/letsencrypt/live/example.com/privkey.pem; # managed by Certbot
         include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
         ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
     }
